--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <title>About Us - Digital Life Hub</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2440011936736360"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- HEADER -->
