--- a/gaming.html
+++ b/gaming.html
@@ -4,6 +4,8 @@ G<!DOCTYPE html>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaming – Digital Life Hub</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2440011936736360"
+     crossorigin="anonymous"></script>
 
     <style>
         body {
