--- a/tech.html
+++ b/tech.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tech Tutorials | Digital Life Hub</title>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2440011936736360"
+     crossorigin="anonymous"></script>
 <style>
 :root {
     --tech-color: #3182ce;
