--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                     <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
                 </ul>
             </nav>
-            <div class="mobile-menu-btn">
-                <i class="fas fa-bars"></i>
-            </div>
+                <button class="mobile-menu-btn" id="mobileMenuBtn">
+                   <i class="fas fa-bars"></i>
+                </button>
         </div>
     </header>
 
