--- a/food.html
+++ b/food.html
@@ -271,7 +271,7 @@
                 id: 7,
                 title: "Koko and Koose: The Ultimate Ghanaian Breakfast Combo",
                 excerpt: "Learn how to make authentic Hausa koko (spicy millet porridge) paired with perfectly fried koose (bean cakes).",
-                image: "https://pikaso.cdnpk.net/private/production/2825455349/conversions/render-preview.jpg?token=exp=1765238400~hmac=b0bf04d7342bc77d1b61bd725a5f98be766289feb716ecf44333494f00a1bb6e",
+                image: "https://i.ytimg.com/vi/1t9It6wl8Hg/maxresdefault.jpg",
                 readTime: "12 min",
                 date: "March 17, 2024",
                 category: "breakfast",
