--- a/gaming.html
+++ b/gaming.html
@@ -231,7 +231,7 @@
                     id: 3,
                     title: "Fortnite Chapter 5: Complete Beginner's Guide",
                     excerpt: "Everything you need to know to start winning in Fortnite's latest season.",
-                    image: "https://images.unsplash.com/photo-1550745165-9bc0b252726f",
+                    image: "https://tse4.mm.bing.net/th/id/OIP.wCDDPcBdRIFAAOm0OEuFDwHaDt?cb=ucfimg2&ucfimg=1&rs=1&pid=ImgDetMain&o=7&rm=3",
                     readTime: "8 min",
                     date: "2024-03-13"
                 },
@@ -239,7 +239,7 @@
                     id: 6,
                     title: "Mobile Gaming on a Budget: Best Free Games 2024",
                     excerpt: "Top 10 free mobile games that run smoothly on affordable smartphones.",
-                    image: "https://images.unsplash.com/photo-1511512578047-dfb367046420",
+                    image: "https://wallpapercave.com/wp/wp11649025.jpg",
                     readTime: "6 min",
                     date: "2024-03-10"
                 },
@@ -247,7 +247,7 @@
                     id: 15,
                     title: "How I Reached Diamond Rank in Valorant",
                     excerpt: "My journey from Iron to Diamond with practical tips for each rank.",
-                    image: "https://images.unsplash.com/photo-1593305841991-05c297ba4575",
+                    image: "https://i.ytimg.com/vi/RVJkQ8H9PqM/maxresdefault.jpg",
                     readTime: "10 min",
                     date: "2024-03-18"
                 },
@@ -255,7 +255,7 @@
                     id: 16,
                     title: "Building Epic Minecraft Castles: Step-by-Step Guide",
                     excerpt: "Learn architectural techniques to create impressive castles in survival mode.",
-                    image: "https://images.unsplash.com/photo-1550745165-9bc0b252726f",
+                    image: "https://tse4.mm.bing.net/th/id/OIP.Icg3on1wtGKVkzQz72esywHaD4?cb=ucfimg2&ucfimg=1&rs=1&pid=ImgDetMain&o=7&rm=3",
                     readTime: "15 min",
                     date: "2024-03-18"
                 },
@@ -263,7 +263,7 @@
                     id: 17,
                     title: "Gaming PC Build Guide for Ghanaian Gamers",
                     excerpt: "Budget-friendly PC components available in Ghana for optimal gaming.",
-                    image: "https://images.unsplash.com/photo-1593305841991-05c297ba4575",
+                    image: "https://tse4.mm.bing.net/th/id/OIP.DmeFVR4zjeNF6rIieW5RjAAAAA?cb=ucfimg2&ucfimg=1&rs=1&pid=ImgDetMain&o=7&rm=3",
                     readTime: "12 min",
                     date: "2024-03-18"
                 },
@@ -271,7 +271,7 @@
                     id: 18,
                     title: "Top 5 Roblox Games for Educational Fun",
                     excerpt: "Educational games on Roblox that teach coding, physics, and history.",
-                    image: "https://images.unsplash.com/photo-1552820728-8b83bb6b773f",
+                    image: "https://th.bing.com/th/id/R.e0f4c83061e187e9fecc7b4cbd945376?rik=J1q2Z2Ej6rqbfw&pid=ImgRaw&r=0",
                     readTime: "7 min",
                     date: "2024-03-18"
                 }
